<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/parent_Grid"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="20dp"

        />

    <GridLayout
        android:id="@+id/parent_Grid"
        app:layout_constraintTop_toTopOf="parent"
        android:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_plus"
            android:text="+"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/button_minus"
            android:text="-"
            android:textSize="26sp"
            />
        <Button
            android:id="@+id/button_multiply"
            android:text="*"
            android:textSize="26sp" />
        <Button
            android:id="@+id/button_divide"
            android:text="/"
            android:textSize="26sp"/>
        <Button
            android:id="@+id/button_num_one"
            android:text="1"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_num_two"
            android:text="2"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_num_three"
            android:text="3"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_clear"
            android:text="clr"
            android:textSize="16sp"/>
        <Button
            android:id="@+id/button_num_four"
            android:text="4"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_num_five"
            android:text="5"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_num_six"
            android:text="6"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_decimal"
            android:text="."
            android:textSize="16sp"/>
        <Button
            android:id="@+id/button_num_seven"
            android:text="7"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_num_eight"
            android:text="8"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_num_nine"
            android:text="9"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/button_equals"
            android:text="="
            android:textSize="22sp"/>


    </GridLayout>

</android.support.constraint.ConstraintLayout>